MOBILE-3320 styles: Fix some dark mode colors

--- a/src/theme/components/format-text.scss
+++ b/src/theme/components/format-text.scss
@@ -366,7 +366,7 @@ core-rich-text-editor .core-rte-editor {
     input[type=checkbox] {
         position: relative;
 
-        --color: var(--brand-color-contrast);
+        --color: var(--text-color);
         --color-checked: var(--color);
 
         width: var(--size);
